// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example.js format 1`] = `
====================================options=====================================
endOfLine: "lf"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

=====================================output=====================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

================================================================================
`;

exports[`example.js format 2`] = `
====================================options=====================================
endOfLine: "cr"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

=====================================output=====================================
function f() {<CR>
  console.log("testing line endings");<CR>
}<CR>

================================================================================
`;

exports[`example.js format 3`] = `
====================================options=====================================
endOfLine: "crlf"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

=====================================output=====================================
function f() {<CRLF>
  console.log("testing line endings");<CRLF>
}<CRLF>

================================================================================
`;
